--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -236,7 +236,7 @@
                 <div class="col-6 col-md-3 col-lg-3">
                     <h6 class="footer-title mb-3">CONTACTS</h6>
                     <ul class="list-unstyled footer-links">
-                        <li class="mb-2"><i class="fas fa-envelope me-2 footer-contact-icon"></i><a href="mailto:contact@iesasport.ch">contact@iesasport.ch</a></li>
+                        <li class="mb-2"><i class="fas fa-envelope me-2 footer-contact-icon"></i><a href="mailto:iesa@iesasport.ch">iesa@iesasport.ch</a></li>
                         <li class="mb-2"><i class="fas fa-phone me-2 footer-contact-icon"></i><a href="tel:+41795718887">+41 79 571 8887</a></li>
                         <li class="mb-2"><i class="fas fa-location-dot me-2 footer-contact-icon"></i><span class="footer-text">Switzerland</span></li>
                     </ul>
