--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -174,12 +174,12 @@
                                 </span>
                                 {% endif %}
                             </button>
-                            <a href="{% url 'profile' %}" class="btn btn-outline-primary btn-modern d-flex align-items-center navbar-btn">
+                            <a href="{% url 'profile' %}" class="btn btn-light btn-sm position-relative d-flex align-items-center navbar-btn">
                                 <i class="fas fa-user me-2 d-sm-none"></i>
                                 {% if user.avatar and user.avatar.name != 'avatars/default.png' %}
                                     <span class="avatar avatar-sm me-2 d-none d-sm-inline-flex"><img src="{{ user.avatar.url }}" alt="Avatar"></span>
                                 {% else %}
-                                    <span class="avatar avatar-sm avatar-fallback me-2 d-none d-sm-inline-flex">{{ user.username|slice:":1"|upper }}</span>
+                                    <span class="avatar avatar-sm avatar-fallback me-2 d-none d-sm-inline-flex">{{ user.username|slice":1"|upper }}</span>
                                 {% endif %}
                                 <span>Profile</span>
                             </a>
